<resources>
    <string name="app_name">SQLite With Android Demo</string>
    <string name="customer_name">Customer Name</string>
    <string name="age">Age</string>
    <string name="view_all">View All</string>
    <string name="update_customer">Update Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="is_active">Is Active</string>
    <string name="add_customer">Add Customer</string>
</resources>